# rust-stats

./: Cargo.toml  results.sh  start.sh
src/: main.rs
src/core/: stats.rs
src/domain/: bar.rs  mod.rs  period.rs  position.rs
src/util/: normalizer.rs  parser.rs
